# templates-demo

./: README.md  pyproject.toml
templates_demo/: render_template.py
templates_demo/app/: main.py  mvp.py
templates_demo/app/routers/: templates.py  version.py
templates_demo/templates/: library.py  simple.md
tests/: test_templates_demo.py
