[tool.poetry]
name = "templates-demo"
version = "0.1.0"
license="GPL-3.0+"
description = ""
authors = ["Craig Dalton <craig@loudsquel.ch>"]
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.6"
jinja2 = "^2.10"
fastapi = "^0.12.1"
uvicorn = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
